--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.2.2",
+    "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.13.1",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
