--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.2.2",
+    "@iconify/react": "^5.0.2",
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.14.0",
+    "@react-email/components": "0.0.29",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
     "geist": "^1.3.0",
     "next": "^15.0.1",
@@ -36,6 +39,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^4.0.1",
+    "tailwind-merge": "^2.5.5",
     "uuid": "^11.0.3",
     "zod": "^3.23.3"
   },
@@ -53,6 +57,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
+    "react-email": "3.0.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
   },
