--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -22,15 +22,27 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.2.2",
+    "@hookform/resolvers": "^3.9.1",
     "@iconify/react": "^5.0.2",
+    "@nextui-org/alert": "^2.2.7",
+    "@nextui-org/form": "^2.1.6",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.4.4",
+    "@nextui-org/theme": "^2.4.3",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-email/components": "0.0.29",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uiw/react-codemirror": "^4.23.7",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.469.0",
@@ -39,10 +51,12 @@
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "resend": "^4.0.1",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
