--- a/package.json
+++ b/package.json
@@ -33,11 +33,18 @@
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-email/components": "0.0.29",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-table": "^8.20.6",
     "@uiw/react-codemirror": "^4.23.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
