--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "resend": "^4.0.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
