--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "dev:content": "velite --watch",
+    "build:content": "velite --clean"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -44,6 +46,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-email/components": "0.0.29",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.20.6",
     "@uiw/react-codemirror": "^4.23.7",
     "bcryptjs": "^2.4.3",
@@ -52,6 +55,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
     "geist": "^1.3.0",
+    "github-slugger": "^2.0.0",
     "lucide-react": "^0.469.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
@@ -59,6 +63,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
     "resend": "^4.0.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -82,7 +89,8 @@
     "prisma": "^5.14.0",
     "react-email": "3.0.3",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "velite": "^0.2.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
