--- a/package.json
+++ b/package.json
@@ -29,16 +29,13 @@
     "@edgestore/server": "^0.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@iconify/react": "^5.0.2",
-    "@nextui-org/alert": "^2.2.7",
-    "@nextui-org/form": "^2.1.6",
-    "@nextui-org/react": "^2.4.8",
-    "@nextui-org/system": "^2.4.4",
-    "@nextui-org/theme": "^2.4.3",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
