--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "geist": "^1.3.0",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.469.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.3",
