--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dompurify": "^3.2.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
     "geist": "^1.3.0",
     "github-slugger": "^2.0.0",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^15.0.1",
@@ -73,6 +75,8 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.3",
+    "react-quill-new": "^3.3.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
@@ -80,6 +84,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "uuid": "^11.0.3",
     "vaul": "^1.1.2",
     "zod": "^3.23.8"
@@ -90,6 +95,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
