--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "react-quill-new": "^3.3.3",
+    "recharts": "^2.15.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
