--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@iconify/react": "^5.0.2",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
